app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--foreground-rgb: 0, 0, 0;
	--background-start-rgb: 214, 219, 220;
	--background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: light) {
	:root {
		--foreground-rgb: 255, 255, 255;
		--background-start-rgb: 0, 0, 0;
		--background-end-rgb: 0, 0, 0;
	}
}

body {
	color: rgb(var(--foreground-rgb));
	background: linear-gradient(
			to bottom,
			transparent,
			rgb(var(--background-end-rgb))
		)
		rgb(var(--background-start-rgb));
}

@layer utilities {
	.text-balance {
		text-wrap: balance;
	}
}

@layer base {
	input[type="number"]::-webkit-inner-spin-button,
	input[type="number"]::-webkit-outer-spin-button {
		-webkit-appearance: none;
		margin: 0;
	}
}

@keyframes pop-up {
	0% {
		transform: scale(0);
	}
	100% {
		transform: scale(1);
	}
}

.animate-pop-up {
	animation: pop-up 0.2s ease-out forwards;
}

.scroll-container {
	height: 2rem;
	position: relative;
}

.scroll-content {
	display: flex;
	flex-direction: column;
}

